--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,108 +19,116 @@
             app:title="@string/edit_profile" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
-        android:id="@+id/progress_layout"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        tools:visibility="gone">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/saving" />
-
-        <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:layout_width="@dimen/auth_input_width"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="16dp"
-            android:indeterminate="true" />
-
-    </LinearLayout>
-
-    <ScrollView
-        android:id="@+id/fields_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingVertical="16dp"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        tools:visibility="visible">
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
+            android:id="@+id/progress_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            tools:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/saving" />
+
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:layout_width="@dimen/auth_input_width"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="16dp"
+                android:indeterminate="true" />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:id="@+id/fields_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingVertical="16dp"
+            tools:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="bottom|center_horizontal"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/camera_button"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:background="?selectableItemBackground"
-                    android:clickable="true"
-                    android:contentDescription="@string/open_camera"
-                    android:focusable="true"
-                    android:src="@drawable/camera"
-                    app:tint="#fff" />
-
-                <FrameLayout
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/circular_border"
-                    android:padding="1dp">
+                    android:gravity="bottom|center_horizontal"
+                    android:orientation="horizontal">
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="144dp"
-                        android:layout_height="144dp"
+                    <ImageView
+                        android:id="@+id/camera_button"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginHorizontal="16dp"
+                        android:background="?selectableItemBackground"
+                        android:clickable="true"
+                        android:contentDescription="@string/open_camera"
+                        android:focusable="true"
+                        android:src="@drawable/camera"
+                        app:tint="#fff" />
+
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:background="@drawable/circular_border"
-                        android:padding="5dp"
-                        app:cardCornerRadius="72dp"
-                        app:cardElevation="0dp">
+                        android:padding="1dp">
 
-                        <com.android.volley.toolbox.NetworkImageView
-                            android:id="@+id/avatar_image_view"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:contentDescription="@string/profile_picture"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/person"
-                            tools:src="@tools:sample/avatars" />
-                    </androidx.cardview.widget.CardView>
-                </FrameLayout>
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="144dp"
+                            android:layout_height="144dp"
+                            android:background="@drawable/circular_border"
+                            android:padding="5dp"
+                            app:cardCornerRadius="72dp"
+                            app:cardElevation="0dp">
 
-                <ImageView
-                    android:id="@+id/gallery_button"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                            <com.android.volley.toolbox.NetworkImageView
+                                android:id="@+id/avatar_image_view"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:contentDescription="@string/profile_picture"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/person"
+                                tools:src="@tools:sample/avatars" />
+                        </androidx.cardview.widget.CardView>
+                    </FrameLayout>
+
+                    <ImageView
+                        android:id="@+id/gallery_button"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginHorizontal="16dp"
+                        android:background="?selectableItemBackground"
+                        android:clickable="true"
+                        android:contentDescription="@string/open_photo_gallery"
+                        android:focusable="true"
+                        android:src="@drawable/photo_library"
+                        app:tint="#fff" />
+                </LinearLayout>
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    android:background="?selectableItemBackground"
-                    android:clickable="true"
-                    android:contentDescription="@string/open_photo_gallery"
-                    android:focusable="true"
-                    android:src="@drawable/photo_library"
-                    app:tint="#fff" />
+                    android:layout_marginVertical="16dp" />
+
+                <include
+                    android:id="@+id/user_id_item"
+                    layout="@layout/layout_profile_item" />
             </LinearLayout>
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginVertical="16dp" />
+        </ScrollView>
 
-            <include
-                android:id="@+id/user_id_item"
-                layout="@layout/layout_profile_item" />
-        </LinearLayout>
-
-    </ScrollView>
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="@drawable/toolbar_shadow" />
+    </FrameLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
