--- a/app/src/main/res/layout/activity_user_prefs.xml
+++ b/app/src/main/res/layout/activity_user_prefs.xml
@@ -18,89 +18,98 @@
             app:title="@string/preferences" />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:layout_margin="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/main_menu_position" />
-
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/menu_position_chip_group"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                app:selectionRequired="true"
-                app:singleSelection="true">
+                android:orientation="vertical">
 
-                <include
-                    android:id="@+id/left_chip_layout"
-                    layout="@layout/layout_app_chip" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/main_menu_position" />
 
-                <include
-                    android:id="@+id/right_chip_layout"
-                    layout="@layout/layout_app_chip" />
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/menu_position_chip_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    app:selectionRequired="true"
+                    app:singleSelection="true">
 
-            </com.google.android.material.chip.ChipGroup>
+                    <include
+                        android:id="@+id/left_chip_layout"
+                        layout="@layout/layout_app_chip" />
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="16dp" />
+                    <include
+                        android:id="@+id/right_chip_layout"
+                        layout="@layout/layout_app_chip" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/font_size" />
+                </com.google.android.material.chip.ChipGroup>
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/font_size_chip_group"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                app:selectionRequired="true"
-                app:singleSelection="true">
+                <com.google.android.material.divider.MaterialDivider
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="16dp" />
 
-                <include
-                    android:id="@+id/small_font_chip_layout"
-                    layout="@layout/layout_app_chip" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/font_size" />
 
-                <include
-                    android:id="@+id/medium_font_chip_layout"
-                    layout="@layout/layout_app_chip" />
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/font_size_chip_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="8dp"
+                    app:selectionRequired="true"
+                    app:singleSelection="true">
 
-                <include
-                    android:id="@+id/large_font_chip_layout"
-                    layout="@layout/layout_app_chip" />
+                    <include
+                        android:id="@+id/small_font_chip_layout"
+                        layout="@layout/layout_app_chip" />
 
-            </com.google.android.material.chip.ChipGroup>
+                    <include
+                        android:id="@+id/medium_font_chip_layout"
+                        layout="@layout/layout_app_chip" />
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="16dp" />
+                    <include
+                        android:id="@+id/large_font_chip_layout"
+                        layout="@layout/layout_app_chip" />
 
-            <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/bt_devices_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/show_all_bt_scanning"
-                app:thumbTint="@color/white" />
+                </com.google.android.material.chip.ChipGroup>
 
-            <com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="16dp" />
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+                <com.google.android.material.divider.MaterialDivider
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="16dp" />
 
+                <com.google.android.material.materialswitch.MaterialSwitch
+                    android:id="@+id/bt_devices_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/show_all_bt_scanning"
+                    app:thumbTint="@color/white" />
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="16dp" />
+            </LinearLayout>
+        </ScrollView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="@drawable/toolbar_shadow" />
+    </FrameLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
