--- a/app/src/main/res/layout/activity_permissions_setup.xml
+++ b/app/src/main/res/layout/activity_permissions_setup.xml
@@ -36,7 +36,7 @@
         android:layout_width="@dimen/setup_button_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/set_bluetooth_permissions" />
+        android:text="@string/set_bluetooth_permission" />
 
     <Button
         android:id="@+id/bluetooth_state_button"
@@ -44,5 +44,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/enable_bluetooth" />
+
+    <Button
+        android:id="@+id/notifications_button"
+        android:layout_width="@dimen/setup_button_width"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/set_notifications_permission" />
 
 </LinearLayout>
