--- a/app/src/main/res/layout/activity_verify_email.xml
+++ b/app/src/main/res/layout/activity_verify_email.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
     android:padding="16dp"
     tools:context=".ng3.activities.VerifyEmailActivity">
 
@@ -13,13 +12,15 @@
         android:id="@+id/progress_horizontal"
         android:layout_width="@dimen/auth_input_width"
         android:layout_height="wrap_content"
-        android:indeterminate="true" />
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        tools:visibility="invisible" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/message_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:visibility="visible">
+        tools:visibility="invisible">
 
         <TextView
             android:id="@+id/title"
@@ -92,4 +93,61 @@
             app:layout_constraintTop_toBottomOf="@id/resend_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/offline_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/offline_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/check_internet_connection"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:viewBindingIgnore="true" />
+
+        <ImageView
+            android:id="@+id/offline_icon"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/offline"
+            android:src="@drawable/wifi_off"
+            app:layout_constraintEnd_toEndOf="@id/offline_title"
+            app:layout_constraintStart_toStartOf="@id/offline_title"
+            app:layout_constraintTop_toBottomOf="@id/offline_title"
+            app:tint="@color/status_grey"
+            tools:viewBindingIgnore="true" />
+
+        <TextView
+            android:id="@+id/offline_message_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/device_offline"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/offline_icon"
+            tools:viewBindingIgnore="true" />
+
+        <Button
+            android:id="@+id/retry_button"
+            android:layout_width="@dimen/auth_input_width"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="@string/try_again"
+            android:textAllCaps="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/offline_message_text_view" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
