--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -45,7 +45,7 @@
                     android:orientation="vertical"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:visibility="invisible">
+                    tools:visibility="visible">
 
                     <TextView
                         android:id="@+id/connection_status_text_view"
@@ -164,7 +164,18 @@
                                 app:layout_constraintEnd_toEndOf="@id/storage_gauge"
                                 app:layout_constraintStart_toStartOf="@id/storage_gauge"
                                 app:layout_constraintTop_toTopOf="@id/storage_gauge"
-                                tools:text="295GB\nFree" />
+                                tools:text="295GB\nFree"
+                                tools:visibility="visible" />
+
+                            <ImageView
+                                android:id="@+id/storage_error_icon"
+                                android:layout_width="44dp"
+                                android:layout_height="44dp" tools:visibility="visible"
+                                android:src="@drawable/error" android:visibility="gone"
+                                app:layout_constraintBottom_toBottomOf="@id/storage_gauge"
+                                app:layout_constraintEnd_toEndOf="@id/storage_gauge"
+                                app:layout_constraintStart_toStartOf="@id/storage_gauge"
+                                app:layout_constraintTop_toTopOf="@id/storage_gauge" />
 
                             <TextView
                                 android:id="@+id/battery_gauge_label"
