--- a/app/src/main/res/layout/activity_device_settings.xml
+++ b/app/src/main/res/layout/activity_device_settings.xml
@@ -36,11 +36,38 @@
             android:text="@string/instructions"
             android:textAlignment="center" />
 
+        <LinearLayout
+            android:id="@+id/progress_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="16dp"
+            tools:visibility="gone">
+
+            <TextView
+                android:id="@+id/progress_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/applying_changes" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
+
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+        </LinearLayout>
+
         <ScrollView
+            android:id="@+id/content_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="@dimen/bottom_bar_size"
-            android:padding="16dp">
+            android:padding="16dp"
+            tools:visibility="visible">
 
             <LinearLayout
                 android:id="@+id/card_container"
@@ -48,13 +75,179 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/sample_rate_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sample_rate"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:viewBindingIgnore="true" />
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/sample_rate_chip_group"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintTop_toBottomOf="@id/sample_rate_text_view"
+                        app:selectionRequired="true"
+                        app:singleSelection="true">
+
+                        <include
+                            android:id="@+id/rate_44k_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/rate_32k_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/rate_22k_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/rate_16k_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/rate_8k_layout"
+                            layout="@layout/layout_app_chip" />
+
+                    </com.google.android.material.chip.ChipGroup>
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:id="@+id/div1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/sample_rate_chip_group"
+                        tools:viewBindingIgnore="true" />
+
+                    <TextView
+                        android:id="@+id/gain_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        android:text="@string/microphone_gain"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/div1"
+                        tools:viewBindingIgnore="true" />
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/gain_chip_group"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintTop_toBottomOf="@id/gain_text_view"
+                        app:selectionRequired="true"
+                        app:singleSelection="true">
+
+                        <include
+                            android:id="@+id/gain_low_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/gain_high_layout"
+                            layout="@layout/layout_app_chip" />
+
+                    </com.google.android.material.chip.ChipGroup>
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:id="@+id/div2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/gain_chip_group"
+                        tools:viewBindingIgnore="true" />
+
+                    <TextView
+                        android:id="@+id/recording_time_per_file_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        android:text="@string/recording_time_per_file"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/div2" />
+
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/file_time_chip_group"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintTop_toBottomOf="@id/recording_time_per_file_tv"
+                        app:selectionRequired="true"
+                        app:singleSelection="true">
+
+                        <include
+                            android:id="@+id/time_12h_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/time_4h_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/time_1h_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/time_1m_layout"
+                            layout="@layout/layout_app_chip" />
+
+                        <include
+                            android:id="@+id/time_10s_layout"
+                            layout="@layout/layout_app_chip" />
+
+                    </com.google.android.material.chip.ChipGroup>
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:id="@+id/div3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/file_time_chip_group"
+                        tools:viewBindingIgnore="true" />
+
+                    <com.google.android.material.materialswitch.MaterialSwitch
+                        android:id="@+id/log_switch"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        android:text="@string/log_to_sd_card"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/div3"
+                        app:thumbTint="@color/white" />
+
+                    <com.google.android.material.divider.MaterialDivider
+                        android:id="@+id/div4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/log_switch"
+                        tools:viewBindingIgnore="true" />
+
+                    <com.google.android.material.materialswitch.MaterialSwitch
+                        android:id="@+id/arm_switch"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="16dp"
+                        android:checked="true"
+                        android:text="@string/arm_during_recording"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/div4"
+                        app:thumbTint="@color/white" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/recording_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardBackgroundColor="@color/cardview"
                     app:cardCornerRadius="8dp"
-                    app:contentPadding="8dp">
+                    app:contentPadding="8dp"
+                    tools:visibility="visible">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -104,77 +297,7 @@
                                 tools:text="ELOC18" />
                         </com.google.android.material.textfield.TextInputLayout>
 
-                        <TextView
-                            android:id="@+id/sample_rate_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="@string/sample_rate" />
 
-                        <com.google.android.material.chip.ChipGroup
-                            android:id="@+id/sample_rate_chip_group"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:selectionRequired="true"
-                            app:singleSelection="true">
-
-                            <include
-                                android:id="@+id/rate_44k_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/rate_32k_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/rate_22k_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/rate_16k_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/rate_8k_layout"
-                                layout="@layout/layout_app_chip" />
-
-                        </com.google.android.material.chip.ChipGroup>
-
-                        <TextView
-                            android:id="@+id/recording_time_per_file_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="@string/recording_time_per_file" />
-
-                        <com.google.android.material.chip.ChipGroup
-                            android:id="@+id/file_time_chip_group"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:selectionRequired="true"
-                            app:singleSelection="true">
-
-                            <include
-                                android:id="@+id/time_12h_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/time_4h_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/time_1h_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/time_1m_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/time_10s_layout"
-                                layout="@layout/layout_app_chip" />
-
-                        </com.google.android.material.chip.ChipGroup>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -376,65 +499,6 @@
                                 tools:text="ns" />
                         </com.google.android.material.textfield.TextInputLayout>
 
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/microphone_gain_card"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:cardBackgroundColor="@color/cardview"
-                    app:cardCornerRadius="8dp"
-                    app:contentPadding="8dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:text="@string/microphone_gain"
-                                android:textAllCaps="true"
-                                android:textStyle="bold" />
-
-                            <Button
-                                android:id="@+id/microphone_gain_button"
-                                style="@style/AppTextButton"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@string/run"
-                                app:drawableEndCompat="@drawable/run"
-                                app:drawableTint="@color/colorPrimary" />
-
-                        </LinearLayout>
-
-                        <com.google.android.material.chip.ChipGroup
-                            android:id="@+id/mic_gain_chip_group"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            app:selectionRequired="true"
-                            app:singleSelection="true">
-
-                            <include
-                                android:id="@+id/low_gain_layout"
-                                layout="@layout/layout_app_chip" />
-
-                            <include
-                                android:id="@+id/high_gain_layout"
-                                layout="@layout/layout_app_chip" />
-
-                        </com.google.android.material.chip.ChipGroup>
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
