--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -326,7 +326,7 @@
                         <TextView
                             android:id="@+id/hours_per_file_title_tv"
                             style="@style/TileTitle"
-                            android:text="@string/hours_per_file"
+                            android:text="@string/time_per_file"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/divider8" />
 
