--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -211,18 +211,22 @@
                                     android:id="@+id/gps_status"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textAlignment="center"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     app:layout_constraintBottom_toBottomOf="@id/gps_gauge"
                                     app:layout_constraintEnd_toEndOf="@id/gps_gauge"
                                     app:layout_constraintStart_toStartOf="@id/gps_gauge"
                                     app:layout_constraintTop_toTopOf="@id/gps_gauge"
-                                    tools:text="8825m" />
+                                    tools:text="8m" />
 
                                 <TextView
                                     android:id="@+id/battery_status"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:gravity="center"
+                                    android:textAlignment="center"
                                     android:textSize="16sp"
                                     android:textStyle="bold"
                                     app:layout_constraintBottom_toBottomOf="@id/battery_gauge"
@@ -305,16 +309,16 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/detecting_since"
-                                tools:itemValue="1d 10h 22m" />
+                                app:keyText="@string/detecting_since"
+                                tools:valueText="1d 10h 22m" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/recording_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/recording"
-                                tools:itemValue="OFF" />
+                                app:keyText="@string/recording"
+                                tools:valueText="OFF" />
 
                             <com.google.android.material.divider.MaterialDivider
                                 android:id="@+id/status_divider"
@@ -341,24 +345,24 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/record_when_detected"
-                                tools:itemValue="ON" />
+                                app:keyText="@string/record_when_detected"
+                                tools:valueText="ON" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/model_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/model"
-                                tools:itemValue="Trumpet_V12" />
+                                app:keyText="@string/model"
+                                tools:valueText="Trumpet_V12" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/communication_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/communication"
-                                tools:itemValue="LoRa" />
+                                app:keyText="@string/communication"
+                                tools:valueText="LoRa" />
 
                             <com.google.android.material.divider.MaterialDivider
                                 android:layout_width="match_parent"
@@ -367,43 +371,54 @@
                                 app:dividerColor="@color/black"
                                 tools:viewBindingIgnore="true" />
 
-                            <TextView
-                                android:id="@+id/recorder_section_title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginHorizontal="16dp"
-                                android:text="@string/recorder_settings"
-                                android:textAllCaps="true"
-                                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                                android:textColor="@color/recorder_settings_title"
-                                android:textStyle="bold"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toBottomOf="@id/communication_item"
-                                tools:viewBindingIgnore="true" />
-
-                            <de.eloc.eloc_control_panel.widgets.ListItem
-                                android:id="@+id/sample_rate_item"
+                            <LinearLayout
+                                android:id="@+id/recorder_container"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="16dp"
-                                app:itemLabel="@string/sample_rate"
-                                tools:itemValue="16kHz" />
+                                android:background="@android:color/transparent"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:orientation="vertical">
 
-                            <de.eloc.eloc_control_panel.widgets.ListItem
-                                android:id="@+id/gain_item"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="16dp"
-                                app:itemLabel="@string/gain"
-                                tools:itemValue="HIGH" />
+                                <TextView
+                                    android:id="@+id/recorder_section_title"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginHorizontal="16dp"
+                                    android:text="@string/recorder_settings"
+                                    android:textAllCaps="true"
+                                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                                    android:textColor="@color/recorder_settings_title"
+                                    android:textStyle="bold"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toBottomOf="@id/communication_item"
+                                    tools:viewBindingIgnore="true" />
 
-                            <de.eloc.eloc_control_panel.widgets.ListItem
-                                android:id="@+id/time_per_file_item"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="16dp"
-                                app:itemLabel="@string/time_per_file"
-                                tools:itemValue="5h" />
+                                <de.eloc.eloc_control_panel.widgets.ListItem
+                                    android:id="@+id/sample_rate_item"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="16dp"
+                                    app:keyText="@string/sample_rate"
+                                    tools:valueText="16kHz" />
+
+                                <de.eloc.eloc_control_panel.widgets.ListItem
+                                    android:id="@+id/gain_item"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="16dp"
+                                    app:keyText="@string/gain"
+                                    tools:valueText="HIGH" />
+
+
+                                <de.eloc.eloc_control_panel.widgets.ListItem
+                                    android:id="@+id/time_per_file_item"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginStart="16dp"
+                                    app:keyText="@string/time_per_file"
+                                    tools:valueText="5h" />
+                            </LinearLayout>
 
                             <com.google.android.material.divider.MaterialDivider
                                 android:layout_width="match_parent"
@@ -429,88 +444,88 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/session_id"
-                                tools:itemValue="ELOC23432423497" />
+                                app:keyText="@string/session_id"
+                                tools:valueText="ELOC23432423497" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/battery_type_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/battery_type"
-                                tools:itemValue="LiFePo4" />
+                                app:keyText="@string/battery_type"
+                                tools:valueText="LiFePo4" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/battery_volt_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/battery_volt"
-                                tools:itemValue="3.23" />
+                                app:keyText="@string/battery_volt"
+                                tools:valueText="3.23" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/file_header_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/file_header"
-                                tools:itemValue="Riv 78" />
+                                app:keyText="@string/file_header"
+                                tools:valueText="Riv 78" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/last_location_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/last_location"
-                                tools:itemValue="13453+GT" />
+                                app:keyText="@string/last_location"
+                                tools:valueText="13453+GT" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/uptime_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/uptime"
-                                tools:itemValue="1d 5h 10m" />
+                                app:keyText="@string/uptime"
+                                tools:valueText="1d 5h 10m" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/rec_since_boot_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/rec_since_boot"
-                                tools:itemValue="1d 5h 10m" />
+                                app:keyText="@string/rec_since_boot"
+                                tools:valueText="1d 5h 10m" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/bluetooth_during_recording_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/bluetooth_during_recording"
-                                tools:itemValue="ON" />
+                                app:keyText="@string/bluetooth_during_recording"
+                                tools:valueText="ON" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/microphone_type_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/microphone_type"
-                                tools:itemValue="ICS-43434" />
+                                app:keyText="@string/microphone_type"
+                                tools:valueText="ICS-43434" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/firmware_version_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/firmware_version"
-                                tools:itemValue="v1.23" />
+                                app:keyText="@string/firmware_version"
+                                tools:valueText="v1.23" />
 
                             <de.eloc.eloc_control_panel.widgets.ListItem
                                 android:id="@+id/app_version_item"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="16dp"
-                                app:itemLabel="@string/app_version"
-                                tools:itemValue="v4.56" />
+                                app:keyText="@string/app_version"
+                                tools:valueText="v4.56" />
 
                             <Space
                                 android:layout_width="match_parent"
