--- a/app/src/main/res/values/old_strings.xml
+++ b/app/src/main/res/values/old_strings.xml
@@ -1,14 +1,14 @@
 <resources>
-    <string name="_10s">10s</string>
-    <string name="_12h">12h</string>
-    <string name="_16k">16K</string>
-    <string name="_1h">1h</string>
-    <string name="_1m">1m</string>
-    <string name="_22k">22k</string>
-    <string name="_32k">32k</string>
-    <string name="_44k">44k</string>
-    <string name="_4h">4h</string>
-    <string name="_8k">8k</string>
+    <string name="_10s">10 secs</string>
+    <string name="_12h">12 hrs</string>
+    <string name="_16k">16 kHz</string>
+    <string name="_1h">1 hr</string>
+    <string name="_1m">1 min</string>
+    <string name="_22k">22 kHz</string>
+    <string name="_32k">32 kHz</string>
+    <string name="_44k">44 kHz</string>
+    <string name="_4h">4 hrs</string>
+    <string name="_8k">8 kHz</string>
     <string name="a_few_things_must_be_done_to_proceed">A few things must be done to proceed…</string>
     <string name="about_app">About app</string>
     <string name="account">Account</string>
