--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -25,4 +25,8 @@
         </attr>
         <attr name="indent" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="ModeButton">
+        <attr name="isBusy" format="boolean" />
+    </declare-styleable>
 </resources>
