--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -93,59 +93,18 @@
                     android:layout_height="match_parent"
                     tools:visibility="visible">
 
-                    <TextView
-                        android:id="@+id/start_recording_button"
+                    <de.eloc.eloc_control_panel.widgets.ModeButton
+                        android:id="@+id/mode_button"
                         android:layout_width="match_parent"
                         android:layout_height="72dp"
-                        android:background="@color/recording_off_button"
-                        android:clickable="true"
-                        android:elevation="16dp"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:paddingVertical="16dp"
-                        android:text="@string/start_recording"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                        app:isBusy="true"
                         app:layout_constraintBottom_toBottomOf="parent" />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="8dp"
                         android:background="@drawable/toolbar_shadow_inverted"
-                        app:layout_constraintBottom_toTopOf="@id/start_recording_button" />
-
-                    <TextView
-                        android:id="@+id/stop_button"
-                        android:layout_width="match_parent"
-                        android:layout_height="72dp"
-                        android:background="@color/critical_red"
-                        android:clickable="true"
-                        android:elevation="16dp"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:paddingVertical="16dp"
-                        android:text="@string/stop_label"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        tools:visibility="visible" />
-
-                    <TextView
-                        android:id="@+id/start_detecting_button"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:background="@color/detecting_off_button"
-                        android:clickable="true"
-                        android:elevation="16dp"
-                        android:focusable="true"
-                        android:gravity="center"
-                        android:paddingVertical="16dp"
-                        android:text="@string/start_detecting"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        tools:visibility="visible" />
+                        app:layout_constraintBottom_toTopOf="@id/mode_button" />
 
                     <ScrollView
                         android:id="@+id/scroll_view"
