--- a/app/src/main/res/values/old_strings.xml
+++ b/app/src/main/res/values/old_strings.xml
@@ -14,7 +14,7 @@
     <string name="account">Account</string>
     <string name="account_created">Account created</string>
     <string name="account_settings">Account settings</string>
-    <string name="advanced_options">Advanced options</string>
+    <string name="advanced">Advanced</string>
     <string name="already_verified">Already verified</string>
     <string name="app_logo">App logo</string>
     <string name="app_restart_message">A different font size was set.\nYou must restart the app to apply the requested font size.</string>
@@ -43,8 +43,8 @@
     <string name="command">Command</string>
     <string name="command_missing">You must enter a command to run!</string>
     <string name="confirm_update">Confirm update</string>
-
-    <string name="connection_close_message">The ELOC is set to turn off bluetooth while recording.\n\nThe bluetooth connection will be closed.</string>
+    <string name="yes_continue">Yes, Continue</string>
+    <string name="connection_close_message">The ELOC is set to turn off bluetooth while recording.\n\nIf you continue, the bluetooth connection will be closed.\n\nDo you want to continue?</string>
     <string name="create_new_account">Create new account</string>
     <string name="current_email_address">Current email address:</string>
     <string name="current_password">Current password</string>
