--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="drawer_width">280dp</dimen>
     <dimen name="tab_corner_radius">8dp</dimen>
     <dimen name="gauge_font_size">14sp</dimen>
+    <dimen name="divider_margin">16sp</dimen>
 </resources>
