Show all ELOCs in list view

--- a/app/src/main/res/layout/layout_list_view_dialog.xml
+++ b/app/src/main/res/layout/layout_list_view_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,18 +17,21 @@
         app:tint="@color/white" />
 
     <TextView
+        android:id="@+id/title_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/elocs_with_unknown_location"
         android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/back_button"
-        app:layout_constraintTop_toTopOf="@id/back_button" />
+        app:layout_constraintTop_toTopOf="@id/back_button"
+        tools:text="Dialog title" />
 
     <ListView
-        android:id="@+id/list_view" android:layout_marginTop="?actionBarSize"
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="?actionBarSize" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
